feat(#82,#87): CBR weighted similarity — per-field local similarity with configurable weights
CbrQuery gains weights and vectorWeight fields. CbrSimilarityScorer computes
weighted composite similarity using field-type-derived local functions
(categorical exact match, numeric linear decay, text exact match). Features
move from hard Qdrant payload filters to client-side graded scoring. Identity
fields remain as hard Qdrant filters. Updated CLAUDE.md module descriptions.

Closes #82
Closes #87

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>